// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Verify Signup Email Controller Snapshot Test for delete expired user and ask signup again 1`] = `
{
  "body": {
    "message": "User is not registered, signup again.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Verify Signup Email Controller Snapshot Test for email already verified 1`] = `
{
  "body": {
    "message": "Email already verified.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Verify Signup Email Controller Snapshot Test for internal server error 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while verifying email.Try again.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Verify Signup Email Controller Snapshot Test for invalid token 1`] = `
{
  "body": {
    "message": "Invalid token",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Verify Signup Email Controller Snapshot Test for successful email verification 1`] = `
{
  "body": {
    "data": {
      "_id": "123",
      "email": "test@gmail.com",
      "emailVerified": true,
      "isActive": true,
      "toObject": [Function],
      "username": "test",
    },
    "message": "Email verified and account created successfully.",
    "success": true,
    "token": "mocked-jwt-token",
  },
  "status": 201,
}
`;

exports[`Verify Signup Email Controller Snapshot Test for token expired 1`] = `
{
  "body": {
    "message": "Token expired, generate new token.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Verify Signup Email Controller Snapshot Test for token missing 1`] = `
{
  "body": {
    "message": "Token is missing",
    "success": false,
  },
  "status": 400,
}
`;
